# crytex-chain

./: CMakeLists.txt  README.md
include/: block.h  blockchain.h  miner.h  p2p.h  transaction.h  wallet.h
scripts/: setup_node.sh
src/: block.cpp  blockchain.cpp  miner.cpp  p2p.cpp  transaction.cpp  wallet.cpp
